@@ -124,6 +124,8 @@ public:
     STDMETHOD(put_EnvironmentEmissionScale)(/*[in]*/ float newVal);
     STDMETHOD(get_LightEmissionScale)(/*[out, retval]*/ float *pVal);
     STDMETHOD(put_LightEmissionScale)(/*[in]*/ float newVal);
+    STDMETHOD(get_NightDay)(/*[out, retval]*/ int *pVal);
+    STDMETHOD(put_NightDay)(/*[in]*/ int newVal);
     STDMETHOD(get_AOScale)(/*[out, retval]*/ float *pVal);
     STDMETHOD(put_AOScale)(/*[in]*/ float newVal);
     STDMETHOD(get_BallReflection)(/*[out, retval]*/ int *pVal);
@@ -633,6 +635,7 @@ END_CONNECTION_POINT_MAP()
     float m_lightRange;
 	float m_lightEmissionScale;
 	float m_envEmissionScale;
+	float m_globalEmissionScale;
 	float m_AOScale;
 
     int m_useReflectionForBalls;
